--- a/datasets.ipynb
+++ b/datasets.ipynb
@@ -28,7 +28,7 @@
     "# Default data sets\n",
     "\n",
     "N_DIM = 10\n",
-    "N_POINTS = 100000\n",
+    "N_POINTS = 1000000\n",
     "def default_sets(N_dim=N_DIM):\n",
     "    sets = {\n",
     "        \"Uncorr.\": (N_dim, N_POINTS, 0.0, 0.0),\n",
