--- a/covfit.ipynb
+++ b/covfit.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The history saving thread hit an unexpected error (DatabaseError('database disk image is malformed')).History will not be written to the database.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np"
    ]
@@ -39,6 +47,7 @@
    "source": [
     "# Define expected distributions for fitted \"chi2\"\n",
     "from scipy.stats import norm, chi, chi2, rv_continuous\n",
+    "from scipy.special import erf, erfinv\n",
     "\n",
     "class Bee(rv_continuous):\n",
     "    def _cdf(self, x, df):\n",
@@ -77,7 +86,6 @@
    "outputs": [],
    "source": [
     "# Transorm uncorrelated fitted \"chi2\" to chi2(ndof=1)\n",
-    "from scipy.special import erf, erfinv\n",
     "def scaled(data, N_dim):\n",
     "    return 2 * erfinv( erf(np.sqrt(fitted(data))/np.sqrt(2))**N_dim )**2\n",
     "    #return (2/np.pi)**(N_dim-1) * x**N_dim"
