--- a/covfit.ipynb
+++ b/covfit.ipynb
@@ -127,7 +127,7 @@
    "outputs": [],
    "source": [
     "@np.vectorize\n",
-    "@lru_cache(50000)\n",
+    "@lru_cache(500000)\n",
     "def _minfrommax(b, df=2):\n",
     "    \"\"\"Position of sides of missing corner from coordinates of hypercube sides.\"\"\"\n",
     "    # b**df - (b-x)**df = x\n",
@@ -174,6 +174,8 @@
     "    df = x.shape[-1]\n",
     "    mfm = minfrommax(b, df=df)\n",
     "    x = np.maximum(a, mfm)\n",
+    "    # Cap value in case of rounding errors or stray root finding\n",
+    "    x = np.minimum(x, 1. - 1e-9)\n",
     "    return chi2.ppf(x, df=1)"
    ]
   },
@@ -184,7 +186,7 @@
    "outputs": [],
    "source": [
     "@np.vectorize\n",
-    "@lru_cache(50000)\n",
+    "@lru_cache(500000)\n",
     "def _xfrommax(b, df=2, alpha=0.5):\n",
     "    \"\"\"Diagonal coordinate from max of accepted region\"\"\"\n",
     "    # A = b**df - ((b-x)**df)/((1-x)**(df-1)) = alpha**(df-1) * x\n",
@@ -194,7 +196,7 @@
     "    if b == 0:\n",
     "        return 0\n",
     "    else:\n",
-    "        return root_scalar(f, x0=b, x1=b*0.99).root\n",
+    "        return root_scalar(f, x0=b, x1=b*0.999).root\n",
     "\n",
     "def xfrommax(b, df=2, alpha=0.5):\n",
     "    \"\"\"Diagonal coordinate from max of accepted region\"\"\"\n",
@@ -220,7 +222,7 @@
     "    a = np.min(cdf, axis=-1) * alpha\n",
     "    b = np.max(cdf, axis=-1) * alpha\n",
     "    \n",
-    "    # Get possibl diagonal coordinate from maximum value\n",
+    "    # Get possible diagonal coordinate from maximum value\n",
     "    df = x.shape[-1]\n",
     "    xfm = xfrommax(b, df=df, alpha=alpha)\n",
     "    \n",
@@ -230,6 +232,8 @@
     "    xfc = (lower / (lower + upper))\n",
     "    \n",
     "    x = np.maximum(xfc, xfm) / alpha\n",
+    "    # Cap value in case of rounding errors or stray root finding\n",
+    "    x = np.minimum(x, 1. - 1e-9)\n",
     "    return chi2.ppf(x, df=1)"
    ]
   }
