--- a/covfit.ipynb
+++ b/covfit.ipynb
@@ -108,7 +108,7 @@
     "def smooth_max(x, p):\n",
     "    return p_mean(x, p)\n",
     "\n",
-    "def invariant1(x, p=[10000, 10000]):\n",
+    "def invariant1(x):\n",
     "    \"\"\"Triangular wings\"\"\"\n",
     "    cdf = chi2.cdf(x**2, df=1)\n",
     "    #a = smooth_min(cdf, p[0])\n",
@@ -163,7 +163,7 @@
     "    x__ = _minfrommax(b__, df)\n",
     "    return x_ + (x__ - x_)*delta\n",
     "    \n",
-    "def invariant2(x, p=[10000, 10000]):\n",
+    "def invariant2(x):\n",
     "    \"\"\"Hypercube minus corner\"\"\"\n",
     "    cdf = chi2.cdf(x**2, df=1)\n",
     "    #a = smooth_min(cdf, p[0])\n",
@@ -186,7 +186,7 @@
    "outputs": [],
    "source": [
     "@np.vectorize\n",
-    "@lru_cache(500000)\n",
+    "@lru_cache(10000)\n",
     "def _xfrommax(b, df=2, alpha=0.5):\n",
     "    \"\"\"Diagonal coordinate from max of accepted region\"\"\"\n",
     "    # A = b**df - ((b-x)**df)/((1-x)**(df-1)) = alpha**(df-1) * x\n",
@@ -208,7 +208,7 @@
     "    x__ = _xfrommax(b__, df=df, alpha=alpha)\n",
     "    return x_ + (x__ - x_)*delta\n",
     "\n",
-    "def invariant3(x, alpha=0.5, p=[10000, 10000]):\n",
+    "def invariant3_(x, alpha=0.5):\n",
     "    \"\"\"Hybrid\n",
     "    \n",
     "    ::\n",
@@ -233,8 +233,67 @@
     "    \n",
     "    x = np.maximum(xfc, xfm) / alpha\n",
     "    # Cap value in case of rounding errors or stray root finding\n",
-    "    x = np.minimum(x, 1. - 1e-9)\n",
-    "    return chi2.ppf(x, df=1)"
+    "    x = np.minimum(x, 1.)\n",
+    "    return chi2.ppf(x, df=1)\n",
+    "\n",
+    "@np.vectorize\n",
+    "@lru_cache(10000)\n",
+    "def _yfrommax(b, df=2, alpha=0.5):\n",
+    "    \"\"\"(1 - diagonal coordinate) from (1 - max) of accepted region\"\"\"\n",
+    "    # A = (1-b)**df - ((y-b)**df)/((1-alpha+alpha*y)**(df-1)) = 1 - y\n",
+    "    beta = 1-alpha\n",
+    "    q = (1.-b)**df - 1\n",
+    "    dfm = df - 1\n",
+    "    def f(y):\n",
+    "        return q - ((y-b)**df)/((beta+alpha*y)**(dfm)) + y\n",
+    "\n",
+    "    if b <= 0:\n",
+    "        return 0.\n",
+    "    if b >= 1:\n",
+    "        return 1.\n",
+    "    else:\n",
+    "        return root_scalar(f, x0=b, x1=b*1.001).root\n",
+    "\n",
+    "def yfrommax(b, df=2, alpha=0.5):\n",
+    "    \"\"\"Diagonal coordinate from max of accepted region\"\"\"\n",
+    "    step = 0.0001\n",
+    "    b_ = np.floor(b / step, dtype=float) * step\n",
+    "    b__ = b_ + step\n",
+    "    delta = (b - b_) / step\n",
+    "    x_ = _yfrommax(b_, df=df, alpha=alpha) \n",
+    "    x__ = _yfrommax(b__, df=df, alpha=alpha)\n",
+    "    return x_ + (x__ - x_)*delta\n",
+    "\n",
+    "def invariant3(x, alpha=0.5, fast=False):\n",
+    "    \"\"\"Hybrid\n",
+    "    \n",
+    "    ::\n",
+    "    \n",
+    "        alpha = 1   -> invariant1\n",
+    "        alpha -> 0  -> invariant2\n",
+    "        \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    if fast:\n",
+    "        # Quite a bit faster, but less accurate\n",
+    "        sf = 1 - chi2.cdf(x**2, df=1)\n",
+    "    else:\n",
+    "        sf = chi2.sf(x**2, df=1)\n",
+    "\n",
+    "    a = np.min(sf, axis=-1)\n",
+    "    b = np.max(sf, axis=-1)\n",
+    "    \n",
+    "    # Get possible diagonal coordinate from maximum CDF value (= minimum SF)\n",
+    "    df = x.shape[-1]\n",
+    "    yfm = yfrommax(a, df=df, alpha=alpha)\n",
+    "    \n",
+    "    # Get possible diagonal coordinate from centre surface\n",
+    "    yfc = (alpha*(a-b) + b) / (1. + alpha*(a-b))\n",
+    "    \n",
+    "    y = np.minimum(yfc, yfm)\n",
+    "    # Cap value in case of rounding errors or stray root finding\n",
+    "    y = np.maximum(y, 0)\n",
+    "    return chi2.isf(y, df=1)"
    ]
   }
  ],
