--- a/covfit.ipynb
+++ b/covfit.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "# Naive uncorrealted chi2\n",
     "def naive(data):\n",
-    "    return np.sum(data**2, axis=-1)"
+    "    return np.sum(data ** 2, axis=-1)"
    ]
   },
   {
@@ -28,7 +28,7 @@
    "source": [
     "# Calculate \"chi2\" w/ fitted correlation\n",
     "def fitted(data):\n",
-    "    return np.max(data**2, axis=-1)"
+    "    return np.max(data ** 2, axis=-1)"
    ]
   },
   {
@@ -41,18 +41,26 @@
     "from scipy.stats import norm, chi, chi2, rv_continuous\n",
     "from scipy.special import erf, erfinv\n",
     "\n",
+    "\n",
     "class Bee(rv_continuous):\n",
     "    def _cdf(self, x, df):\n",
-    "        return erf(x/np.sqrt(2))**df\n",
-    "    \n",
+    "        return erf(x / np.sqrt(2)) ** df\n",
+    "\n",
     "    def _pdf(self, x, df):\n",
-    "        return df*(erf(x/np.sqrt(2)))**(df-1)*np.sqrt(2/np.pi)*np.exp(-x**2/2)\n",
-    "    \n",
+    "        return (\n",
+    "            df\n",
+    "            * (erf(x / np.sqrt(2))) ** (df - 1)\n",
+    "            * np.sqrt(2 / np.pi)\n",
+    "            * np.exp(-(x ** 2) / 2)\n",
+    "        )\n",
+    "\n",
     "    def ppf(self, x, df):\n",
-    "        return erfinv((x)**(1/df)) * np.sqrt(2)\n",
+    "        return erfinv((x) ** (1 / df)) * np.sqrt(2)\n",
+    "\n",
     "\n",
     "# Instance of the distribution, support starts at 0\n",
     "BEE = Bee(a=0)\n",
+    "\n",
     "\n",
     "class Bee2(rv_continuous):\n",
     "    def _cdf(self, x, df):\n",
@@ -61,11 +69,17 @@
     "        return ret\n",
     "\n",
     "    def _pdf(self, x, df):\n",
-    "        return df*(erf(np.sqrt(x/2)))**(df-1)/np.sqrt(2*np.pi*x)*np.exp(-x/2)\n",
+    "        return (\n",
+    "            df\n",
+    "            * (erf(np.sqrt(x / 2))) ** (df - 1)\n",
+    "            / np.sqrt(2 * np.pi * x)\n",
+    "            * np.exp(-x / 2)\n",
+    "        )\n",
     "\n",
     "    def _ppf(self, x, df):\n",
     "        b = BEE.ppf(x, df)\n",
-    "        return b**2\n",
+    "        return b ** 2\n",
+    "\n",
     "\n",
     "# Instance of the distribution, support starts at 0\n",
     "BEE2 = Bee2(a=0)"
@@ -79,8 +93,8 @@
    "source": [
     "# Transorm uncorrelated fitted \"chi2\" to chi2(ndof=1)\n",
     "def scaled(data, N_dim):\n",
-    "    return 2 * erfinv( erf(np.sqrt(fitted(data))/np.sqrt(2))**N_dim )**2\n",
-    "    #return (2/np.pi)**(N_dim-1) * x**N_dim"
+    "    return 2 * erfinv(erf(np.sqrt(fitted(data)) / np.sqrt(2)) ** N_dim) ** 2\n",
+    "    # return (2/np.pi)**(N_dim-1) * x**N_dim"
    ]
   },
   {
@@ -91,31 +105,37 @@
    "source": [
     "# Approximately invariant measures\n",
     "from scipy.special import logsumexp\n",
-    "#from numpy.linalg import norm as nrm\n",
+    "\n",
+    "# from numpy.linalg import norm as nrm\n",
     "from scipy.optimize import root_scalar\n",
     "from functools import lru_cache\n",
     "\n",
+    "\n",
     "def p_mean(x, p):\n",
     "    N = x.shape[-1]\n",
-    "    return np.exp(1/p * (logsumexp(p * np.log(x), axis=-1) - np.log(N)))\n",
+    "    return np.exp(1 / p * (logsumexp(p * np.log(x), axis=-1) - np.log(N)))\n",
+    "\n",
     "\n",
     "def p_norm(x, p):\n",
-    "    return np.exp(1/p * (logsumexp(p * np.log(x), axis=-1)))\n",
+    "    return np.exp(1 / p * (logsumexp(p * np.log(x), axis=-1)))\n",
+    "\n",
     "\n",
     "def smooth_min(x, p):\n",
     "    return p_mean(x, -p)\n",
     "\n",
+    "\n",
     "def smooth_max(x, p):\n",
     "    return p_mean(x, p)\n",
     "\n",
+    "\n",
     "def invariant1(x):\n",
     "    \"\"\"Triangular wings\"\"\"\n",
-    "    cdf = chi2.cdf(x**2, df=1)\n",
-    "    #a = smooth_min(cdf, p[0])\n",
+    "    cdf = chi2.cdf(x ** 2, df=1)\n",
+    "    # a = smooth_min(cdf, p[0])\n",
     "    a = np.min(cdf, axis=-1)\n",
-    "    #b = smooth_max(cdf, p[1])\n",
+    "    # b = smooth_max(cdf, p[1])\n",
     "    b = np.max(cdf, axis=-1)\n",
-    "    \n",
+    "\n",
     "    x = a / (1 - b + a)\n",
     "    return chi2.ppf(x, df=1)"
    ]
@@ -132,26 +152,36 @@
     "    \"\"\"Position of sides of missing corner from coordinates of hypercube sides.\"\"\"\n",
     "    # b**df - (b-x)**df = x\n",
     "    def f(x):\n",
-    "        return b**df - (b-x)**df - x\n",
+    "        return b ** df - (b - x) ** df - x\n",
+    "\n",
     "    if df > 1:\n",
+    "\n",
     "        def fp(x):\n",
-    "            return df * (b-x)**(df-1) * (-1)\n",
+    "            return df * (b - x) ** (df - 1) * (-1)\n",
+    "\n",
     "    else:\n",
+    "\n",
     "        def fp(x):\n",
     "            return -df * np.ones_like(x)\n",
+    "\n",
     "    if df > 2:\n",
+    "\n",
     "        def fpp(x):\n",
-    "            return df * (df-1) * (b-x)**(df-2)\n",
+    "            return df * (df - 1) * (b - x) ** (df - 2)\n",
+    "\n",
     "    else:\n",
+    "\n",
     "        def fpp(x):\n",
-    "            return df * (df-1) * np.ones_like(x)\n",
-    "    #return root_scalar(f, fprime=fp, fprime2=fpp, x0=0.001, x1=0.9).root\n",
-    "    #return root_scalar(f, fprime=fp, x0=b).root\n",
+    "            return df * (df - 1) * np.ones_like(x)\n",
+    "\n",
+    "    # return root_scalar(f, fprime=fp, fprime2=fpp, x0=0.001, x1=0.9).root\n",
+    "    # return root_scalar(f, fprime=fp, x0=b).root\n",
     "    if b == 0:\n",
     "        return 0\n",
     "    else:\n",
-    "        return root_scalar(f, x0=b, x1=b/2).root\n",
-    "    #return root_scalar(f, bracket=(0.0,b)).root\n",
+    "        return root_scalar(f, x0=b, x1=b / 2).root\n",
+    "    # return root_scalar(f, bracket=(0.0,b)).root\n",
+    "\n",
     "\n",
     "def minfrommax(b, df=2):\n",
     "    \"\"\"Position of sides of missing corner from coordinates of hypercube sides.\"\"\"\n",
@@ -159,142 +189,90 @@
     "    b_ = np.floor(b / step, dtype=float) * step\n",
     "    b__ = b_ + step\n",
     "    delta = (b - b_) / step\n",
-    "    x_ = _minfrommax(b_, df) \n",
+    "    x_ = _minfrommax(b_, df)\n",
     "    x__ = _minfrommax(b__, df)\n",
-    "    return x_ + (x__ - x_)*delta\n",
-    "    \n",
+    "    return x_ + (x__ - x_) * delta\n",
+    "\n",
+    "\n",
     "def invariant2(x):\n",
     "    \"\"\"Hypercube minus corner\"\"\"\n",
-    "    cdf = chi2.cdf(x**2, df=1)\n",
-    "    #a = smooth_min(cdf, p[0])\n",
+    "    cdf = chi2.cdf(x ** 2, df=1)\n",
+    "    # a = smooth_min(cdf, p[0])\n",
     "    a = np.min(cdf, axis=-1)\n",
-    "    #b = smooth_max(cdf, p[1])\n",
+    "    # b = smooth_max(cdf, p[1])\n",
     "    b = np.max(cdf, axis=-1)\n",
-    "    \n",
+    "\n",
     "    df = x.shape[-1]\n",
     "    mfm = minfrommax(b, df=df)\n",
     "    x = np.maximum(a, mfm)\n",
     "    # Cap value in case of rounding errors or stray root finding\n",
-    "    x = np.minimum(x, 1. - 1e-9)\n",
+    "    x = np.minimum(x, 1.0 - 1e-9)\n",
     "    return chi2.ppf(x, df=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "@np.vectorize\n",
     "@lru_cache(10000)\n",
-    "def _xfrommax(b, df=2, alpha=0.5):\n",
-    "    \"\"\"Diagonal coordinate from max of accepted region\"\"\"\n",
-    "    # A = b**df - ((b-x)**df)/((1-x)**(df-1)) = alpha**(df-1) * x\n",
-    "    def f(x):\n",
-    "        return b**df - ((b-x)**df)/((1-x)**(df-1)) - alpha**(df-1) * x\n",
-    "\n",
-    "    if b == 0:\n",
-    "        return 0\n",
-    "    else:\n",
-    "        return root_scalar(f, x0=b, x1=b*0.999).root\n",
-    "\n",
-    "def xfrommax(b, df=2, alpha=0.5):\n",
-    "    \"\"\"Diagonal coordinate from max of accepted region\"\"\"\n",
-    "    step = 0.0001\n",
-    "    b_ = np.floor(b / step, dtype=float) * step\n",
-    "    b__ = b_ + step\n",
-    "    delta = (b - b_) / step\n",
-    "    x_ = _xfrommax(b_, df=df, alpha=alpha) \n",
-    "    x__ = _xfrommax(b__, df=df, alpha=alpha)\n",
-    "    return x_ + (x__ - x_)*delta\n",
-    "\n",
-    "def invariant3_(x, alpha=0.5):\n",
-    "    \"\"\"Hybrid\n",
-    "    \n",
-    "    ::\n",
-    "    \n",
-    "        alpha = 1   -> invariant1\n",
-    "        alpha -> 0  -> invariant2\n",
-    "        \n",
-    "    \"\"\"\n",
-    "    \n",
-    "    cdf = chi2.cdf(x**2, df=1)\n",
-    "    a = np.min(cdf, axis=-1) * alpha\n",
-    "    b = np.max(cdf, axis=-1) * alpha\n",
-    "    \n",
-    "    # Get possible diagonal coordinate from maximum value\n",
-    "    df = x.shape[-1]\n",
-    "    xfm = xfrommax(b, df=df, alpha=alpha)\n",
-    "    \n",
-    "    # Get possible diagonal coordinate from stretched centre surface\n",
-    "    lower = a\n",
-    "    upper = 1 - b\n",
-    "    xfc = (lower / (lower + upper))\n",
-    "    \n",
-    "    x = np.maximum(xfc, xfm) / alpha\n",
-    "    # Cap value in case of rounding errors or stray root finding\n",
-    "    x = np.minimum(x, 1.)\n",
-    "    return chi2.ppf(x, df=1)\n",
-    "\n",
-    "@np.vectorize\n",
-    "@lru_cache(10000)\n",
     "def _yfrommax(b, df=2, alpha=0.5):\n",
     "    \"\"\"(1 - diagonal coordinate) from (1 - max) of accepted region\"\"\"\n",
     "    # A = (1-b)**df - ((y-b)**df)/((1-alpha+alpha*y)**(df-1)) = 1 - y\n",
-    "    beta = 1-alpha\n",
-    "    q = (1.-b)**df - 1\n",
+    "    beta = 1 - alpha\n",
+    "    q = (1.0 - b) ** df - 1\n",
     "    dfm = df - 1\n",
+    "\n",
     "    def f(y):\n",
-    "        return q - ((y-b)**df)/((beta+alpha*y)**(dfm)) + y\n",
+    "        return q - ((y - b) ** df) / ((beta + alpha * y) ** (dfm)) + y\n",
     "\n",
     "    if b <= 0:\n",
-    "        return 0.\n",
+    "        return 0.0\n",
     "    if b >= 1:\n",
-    "        return 1.\n",
+    "        return 1.0\n",
     "    else:\n",
-    "        return root_scalar(f, x0=b, x1=b*1.001).root\n",
+    "        return root_scalar(f, x0=b, x1=b * 1.001).root\n",
+    "\n",
     "\n",
     "def yfrommax(b, df=2, alpha=0.5):\n",
-    "    \"\"\"Diagonal coordinate from max of accepted region\"\"\"\n",
+    "    \"\"\"Buffer and interpolate values to speed things up.\"\"\"\n",
     "    step = 0.0001\n",
     "    b_ = np.floor(b / step, dtype=float) * step\n",
     "    b__ = b_ + step\n",
     "    delta = (b - b_) / step\n",
-    "    x_ = _yfrommax(b_, df=df, alpha=alpha) \n",
+    "    x_ = _yfrommax(b_, df=df, alpha=alpha)\n",
     "    x__ = _yfrommax(b__, df=df, alpha=alpha)\n",
-    "    return x_ + (x__ - x_)*delta\n",
+    "    return x_ + (x__ - x_) * delta\n",
+    "\n",
     "\n",
     "def invariant3(x, alpha=0.5, fast=False):\n",
-    "    \"\"\"Hybrid\n",
-    "    \n",
-    "    ::\n",
-    "    \n",
-    "        alpha = 1   -> invariant1\n",
-    "        alpha -> 0  -> invariant2\n",
-    "        \n",
-    "    \"\"\"\n",
-    "    \n",
+    "    \"\"\"Return test statistic given vector of normalised values.\"\"\"\n",
     "    if fast:\n",
-    "        # Quite a bit faster, but less accurate\n",
-    "        sf = 1 - chi2.cdf(x**2, df=1)\n",
+    "        sf = 1 - chi2.cdf(x ** 2, df=1)  # Faster, but less accurate\n",
     "    else:\n",
-    "        sf = chi2.sf(x**2, df=1)\n",
+    "        sf = chi2.sf(x ** 2, df=1)\n",
     "\n",
+    "    # Get possible diagonal coordinate from maximum CDF value (= minimum SF)\n",
     "    a = np.min(sf, axis=-1)\n",
     "    b = np.max(sf, axis=-1)\n",
-    "    \n",
-    "    # Get possible diagonal coordinate from maximum CDF value (= minimum SF)\n",
-    "    df = x.shape[-1]\n",
-    "    yfm = yfrommax(a, df=df, alpha=alpha)\n",
-    "    \n",
+    "    yfm = yfrommax(a, df=x.shape[-1], alpha=alpha)\n",
+    "\n",
     "    # Get possible diagonal coordinate from centre surface\n",
-    "    yfc = (alpha*(a-b) + b) / (1. + alpha*(a-b))\n",
-    "    \n",
+    "    yfc = (alpha * (a - b) + b) / (1.0 + alpha * (a - b))\n",
+    "\n",
     "    y = np.minimum(yfc, yfm)\n",
-    "    # Cap value in case of rounding errors or stray root finding\n",
-    "    y = np.maximum(y, 0)\n",
+    "    y = np.maximum(y, 0)  # Cap in case of rounding or root finding errors\n",
     "    return chi2.isf(y, df=1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
