--- a/fit_magic.ipynb
+++ b/fit_magic.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
        "a_1"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "[a_0/a_2, a_1/a_2,       1]])"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "(a_0*a_1 - sqrt((a_0 - a_2)*(a_0 + a_2)*(a_1 - a_2)*(a_1 + a_2)))/a_2**2"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "[                                                                       a_0/a_2,                                                                        a_1/a_2,       1]])"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "[                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 (-a_0*a_1**2 + a_0*a_2**2 - a_1*a_2**2*a_8 + a_1*sqrt(a_0**2*a_1**2 - a_0**2*a_2**2 - a_1**2*a_2**2 + a_2**4))/(a_2*a_8*(a_2**2*a_8 - 2*sqrt(a_0**2*a_1**2 - a_0**2*a_2**2 - a_1**2*a_2**2 + a_2**4))),                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  (-a_0**2*a_1 - a_0*a_2**2*a_8 + a_0*sqrt(a_0**2*a_1**2 - a_0**2*a_2**2 - a_1**2*a_2**2 + a_2**4) + a_1*a_2**2)/(a_2*a_8*(a_2**2*a_8 - 2*sqrt(a_0**2*a_1**2 - a_0**2*a_2**2 - a_1**2*a_2**2 + a_2**4))),                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           (2*a_0**2*a_1**2 - a_0**2*a_2**2 + 2*a_0*a_1*a_2**2*a_8 - 2*a_0*a_1*sqrt(a_0**2*a_1**2 - a_0**2*a_2**2 - a_1**2*a_2**2 + a_2**4) - a_1**2*a_2**2 + a_2**4*a_8**2 - 2*a_2**2*a_8*sqrt(a_0**2*a_1**2 - a_0**2*a_2**2 - a_1**2*a_2**2 + a_2**4))/(a_2**2*a_8*(a_2**2*a_8 - 2*sqrt(a_0**2*a_1**2 - a_0**2*a_2**2 - a_1**2*a_2**2 + a_2**4)))]])"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "[a_2]])"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -204,13 +204,279 @@
        "Matrix([[a_2**2]])"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "simplify(v.T * Si * v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x, y, z = symbols(\"x y z\", real=True)\n",
+    "a, b, c, d = symbols(\"a b c d\", real=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\int\\limits_{- b}^{b} e^{- \\frac{x^{2}}{2}} \\int\\limits_{b}^{\\frac{b + x \\sin{\\left(a \\right)}}{\\cos{\\left(a \\right)}}} e^{- \\frac{y^{2}}{2}}\\, dy\\, dx$"
+      ],
+      "text/plain": [
+       "Integral(exp(-x**2/2)*Integral(exp(-y**2/2), (y, b, (b + x*sin(a))/cos(a))), (x, -b, b))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Integral(exp(-x**2/2) * Integral(exp(-y**2/2), (y, b, (b+x*sin(a))/cos(a))), (x, -b, b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\int\\limits_{- b}^{b} \\left(x + \\frac{\\left(b + x \\sin{\\left(a \\right)}\\right) \\sin{\\left(a \\right)}}{\\cos^{2}{\\left(a \\right)}}\\right) e^{- \\frac{x^{2}}{2}} e^{- \\frac{\\left(b + x \\sin{\\left(a \\right)}\\right)^{2}}{2 \\cos^{2}{\\left(a \\right)}}}\\, dx$"
+      ],
+      "text/plain": [
+       "Integral((x + (b + x*sin(a))*sin(a)/cos(a)**2)*exp(-x**2/2)*exp(-(b + x*sin(a))**2/(2*cos(a)**2)), (x, -b, b))"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diff(_, a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle - e^{- \\frac{b^{2}}{2}} e^{- \\frac{\\left(b \\sin{\\left(a \\right)} + b\\right)^{2}}{2 \\cos^{2}{\\left(a \\right)}}} + e^{- \\frac{b^{2}}{2}} e^{- \\frac{\\left(- b \\sin{\\left(a \\right)} + b\\right)^{2}}{2 \\cos^{2}{\\left(a \\right)}}}$"
+      ],
+      "text/plain": [
+       "-exp(-b**2/2)*exp(-(b*sin(a) + b)**2/(2*cos(a)**2)) + exp(-b**2/2)*exp(-(-b*sin(a) + b)**2/(2*cos(a)**2))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_.doit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 2 e^{- \\frac{b^{2} \\left(\\tan^{2}{\\left(a \\right)} + 1 + \\frac{1}{\\cos^{2}{\\left(a \\right)}}\\right)}{2}} \\sinh{\\left(\\frac{b^{2} \\sin{\\left(a \\right)}}{\\cos^{2}{\\left(a \\right)}} \\right)}$"
+      ],
+      "text/plain": [
+       "2*exp(-b**2*(tan(a)**2 + 1 + cos(a)**(-2))/2)*sinh(b**2*sin(a)/cos(a)**2)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simplify(_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = 2\n",
+    "S = eye(N)\n",
+    "S[1,0] = a\n",
+    "S[0,1] = a\n",
+    "Sinv = S.inv()\n",
+    "x = symbols(f\"x1:{N+1}\")\n",
+    "v = Matrix(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\int\\limits_{- b}^{b}\\int\\limits_{- b}^{b} \\frac{e^{\\frac{x_{1} \\left(\\frac{a x_{2}}{1 - a^{2}} - \\frac{x_{1}}{1 - a^{2}}\\right)}{2} + \\frac{x_{2} \\left(\\frac{a x_{1}}{1 - a^{2}} - \\frac{x_{2}}{1 - a^{2}}\\right)}{2}}}{\\sqrt{1 - a^{2}}}\\, dx_{1}\\, dx_{2}$"
+      ],
+      "text/plain": [
+       "Integral(exp(x1*(a*x2/(1 - a**2) - x1/(1 - a**2))/2 + x2*(a*x1/(1 - a**2) - x2/(1 - a**2))/2)/sqrt(1 - a**2), (x1, -b, b), (x2, -b, b))"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Integral(1/sqrt(S.det())*exp(-v.T*Sinv*v/2)[0], *[(xn,-b,b) for xn in x])\n",
+    "#1/sqrt(S.det())*exp(-v.T*Sinv*v/2)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#_.doit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\int\\limits_{- b}^{b}\\int\\limits_{- b}^{b} \\left(\\frac{a e^{\\frac{x_{1} \\left(\\frac{a x_{2}}{1 - a^{2}} - \\frac{x_{1}}{1 - a^{2}}\\right)}{2} + \\frac{x_{2} \\left(\\frac{a x_{1}}{1 - a^{2}} - \\frac{x_{2}}{1 - a^{2}}\\right)}{2}}}{\\left(1 - a^{2}\\right)^{\\frac{3}{2}}} + \\frac{\\left(x_{1} \\left(\\frac{a^{2} x_{2}}{\\left(1 - a^{2}\\right)^{2}} - \\frac{a x_{1}}{\\left(1 - a^{2}\\right)^{2}} + \\frac{x_{2}}{2 \\left(1 - a^{2}\\right)}\\right) + x_{2} \\left(\\frac{a^{2} x_{1}}{\\left(1 - a^{2}\\right)^{2}} - \\frac{a x_{2}}{\\left(1 - a^{2}\\right)^{2}} + \\frac{x_{1}}{2 \\left(1 - a^{2}\\right)}\\right)\\right) e^{\\frac{x_{1} \\left(\\frac{a x_{2}}{1 - a^{2}} - \\frac{x_{1}}{1 - a^{2}}\\right)}{2} + \\frac{x_{2} \\left(\\frac{a x_{1}}{1 - a^{2}} - \\frac{x_{2}}{1 - a^{2}}\\right)}{2}}}{\\sqrt{1 - a^{2}}}\\right)\\, dx_{1}\\, dx_{2}$"
+      ],
+      "text/plain": [
+       "Integral(a*exp(x1*(a*x2/(1 - a**2) - x1/(1 - a**2))/2 + x2*(a*x1/(1 - a**2) - x2/(1 - a**2))/2)/(1 - a**2)**(3/2) + (x1*(a**2*x2/(1 - a**2)**2 - a*x1/(1 - a**2)**2 + x2/(2*(1 - a**2))) + x2*(a**2*x1/(1 - a**2)**2 - a*x2/(1 - a**2)**2 + x1/(2*(1 - a**2))))*exp(x1*(a*x2/(1 - a**2) - x1/(1 - a**2))/2 + x2*(a*x1/(1 - a**2) - x2/(1 - a**2))/2)/sqrt(1 - a**2), (x1, -b, b), (x2, -b, b))"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diff(_, a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle - \\frac{\\left(- a^{4} + 2 a^{2} - 1\\right) e^{\\frac{- 2 a b^{2} + 2 b^{2}}{2 \\left(a^{2} - 1\\right)}} - \\left(- a^{4} + 2 a^{2} - 1\\right) e^{\\frac{2 a b^{2} + 2 b^{2}}{2 \\left(a^{2} - 1\\right)}} - \\left(a^{4} - 2 a^{2} + 1\\right) e^{\\frac{- 2 a b^{2} + 2 b^{2}}{2 \\left(a^{2} - 1\\right)}} + \\left(a^{4} - 2 a^{2} + 1\\right) e^{\\frac{2 a b^{2} + 2 b^{2}}{2 \\left(a^{2} - 1\\right)}}}{\\left(1 - a^{2}\\right)^{\\frac{5}{2}}}$"
+      ],
+      "text/plain": [
+       "-((-a**4 + 2*a**2 - 1)*exp((-2*a*b**2 + 2*b**2)/(2*(a**2 - 1))) - (-a**4 + 2*a**2 - 1)*exp((2*a*b**2 + 2*b**2)/(2*(a**2 - 1))) - (a**4 - 2*a**2 + 1)*exp((-2*a*b**2 + 2*b**2)/(2*(a**2 - 1))) + (a**4 - 2*a**2 + 1)*exp((2*a*b**2 + 2*b**2)/(2*(a**2 - 1))))/(1 - a**2)**(5/2)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simplify(_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{2 \\left(1 - e^{\\frac{2 a b^{2}}{a^{2} - 1}}\\right) e^{\\frac{b^{2} \\left(1 - a\\right)}{a^{2} - 1}}}{\\sqrt{1 - a^{2}}}$"
+      ],
+      "text/plain": [
+       "2*(1 - exp(2*a*b**2/(a**2 - 1)))*exp(b**2*(1 - a)/(a**2 - 1))/sqrt(1 - a**2)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simplify(_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sav = _"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\frac{2 \\left(1 - e^{\\frac{2 a b^{2}}{a^{2} - 1}}\\right) e^{\\frac{b^{2} \\left(1 - a\\right)}{a^{2} - 1}}}{\\sqrt{1 - a^{2}}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(latex(sav))"
    ]
   },
   {
