--- a/covfit.ipynb
+++ b/covfit.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "# Naive uncorrealted chi2\n",
     "def naive(data):\n",
-    "    return np.sum(data ** 2, axis=-1)"
+    "    return np.sum(data**2, axis=-1)"
    ]
   },
   {
@@ -26,9 +26,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate \"chi2\" w/ fitted correlation\n",
-    "def fitted(data):\n",
-    "    return np.max(data ** 2, axis=-1)"
+    "# Naive uncorrealted chi2 with inflated errors\n",
+    "def inflated(data, alpha=1.0):\n",
+    "    return np.sum(data**2, axis=-1) / alpha"
    ]
   },
   {
@@ -37,9 +37,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Calculate \"chi2\" w/ fitted correlation\n",
+    "def fitted(data):\n",
+    "    return np.max(data**2, axis=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Define expected distributions for fitted \"chi2\"\n",
-    "from scipy.stats import norm, chi, chi2, rv_continuous\n",
     "from scipy.special import erf, erfinv\n",
+    "from scipy.stats import chi, chi2, norm, rv_continuous\n",
     "\n",
     "\n",
     "class Bee(rv_continuous):\n",
@@ -51,7 +62,7 @@
     "            df\n",
     "            * (erf(x / np.sqrt(2))) ** (df - 1)\n",
     "            * np.sqrt(2 / np.pi)\n",
-    "            * np.exp(-(x ** 2) / 2)\n",
+    "            * np.exp(-(x**2) / 2)\n",
     "        )\n",
     "\n",
     "    def ppf(self, x, df):\n",
@@ -78,7 +89,7 @@
     "\n",
     "    def _ppf(self, x, df):\n",
     "        b = BEE.ppf(x, df)\n",
-    "        return b ** 2\n",
+    "        return b**2\n",
     "\n",
     "\n",
     "# Instance of the distribution, support starts at 0\n",
@@ -87,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,16 +110,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Approximately invariant measures\n",
-    "from scipy.special import logsumexp\n",
+    "from functools import lru_cache\n",
     "\n",
     "# from numpy.linalg import norm as nrm\n",
     "from scipy.optimize import root_scalar\n",
-    "from functools import lru_cache\n",
+    "from scipy.special import logsumexp\n",
     "\n",
     "\n",
     "def p_mean(x, p):\n",
@@ -130,7 +141,7 @@
     "\n",
     "def invariant1(x):\n",
     "    \"\"\"Triangular wings\"\"\"\n",
-    "    cdf = chi2.cdf(x ** 2, df=1)\n",
+    "    cdf = chi2.cdf(x**2, df=1)\n",
     "    # a = smooth_min(cdf, p[0])\n",
     "    a = np.min(cdf, axis=-1)\n",
     "    # b = smooth_max(cdf, p[1])\n",
@@ -142,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +163,7 @@
     "    \"\"\"Position of sides of missing corner from coordinates of hypercube sides.\"\"\"\n",
     "    # b**df - (b-x)**df = x\n",
     "    def f(x):\n",
-    "        return b ** df - (b - x) ** df - x\n",
+    "        return b**df - (b - x) ** df - x\n",
     "\n",
     "    if df > 1:\n",
     "\n",
@@ -196,7 +207,7 @@
     "\n",
     "def invariant2(x):\n",
     "    \"\"\"Hypercube minus corner\"\"\"\n",
-    "    cdf = chi2.cdf(x ** 2, df=1)\n",
+    "    cdf = chi2.cdf(x**2, df=1)\n",
     "    # a = smooth_min(cdf, p[0])\n",
     "    a = np.min(cdf, axis=-1)\n",
     "    # b = smooth_max(cdf, p[1])\n",
@@ -212,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,9 +261,9 @@
     "def invariant3(x, alpha=0.5, fast=False):\n",
     "    \"\"\"Return test statistic given vector of normalised values.\"\"\"\n",
     "    if fast:\n",
-    "        sf = 1 - chi2.cdf(x ** 2, df=1)  # Faster, but less accurate\n",
+    "        sf = 1 - chi2.cdf(x**2, df=1)  # Faster, but less accurate\n",
     "    else:\n",
-    "        sf = chi2.sf(x ** 2, df=1)\n",
+    "        sf = chi2.sf(x**2, df=1)\n",
     "\n",
     "    # Get possible diagonal coordinate from maximum CDF value (= minimum SF)\n",
     "    a = np.min(sf, axis=-1)\n",
@@ -277,7 +288,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -291,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
