Add block fitted and naive.

--- a/covfit.ipynb
+++ b/covfit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,20 +33,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate \"chi2\" w/ fitted correlation\n",
-    "def fitted(data):\n",
-    "    return np.max(data**2, axis=-1)"
+    "def fitted(data, k=None):\n",
+    "    if k is None:\n",
+    "        return np.max(data**2, axis=-1)\n",
+    "    else:\n",
+    "        y = []\n",
+    "        for i, ni in enumerate(k):\n",
+    "            bi = int(np.sum(k[:i]))\n",
+    "            d2 = data**2\n",
+    "            y.append(np.sum(d2[..., bi : bi + ni], axis=-1))\n",
+    "        return np.max(y, axis=0)\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.79228068 0.99999713]\n",
+      "[0.31217298 0.99998567]\n",
+      "[0.79228068 0.99999713]\n",
+      "[0.31217298 0.99998567]\n",
+      "[0.45058405 0.99986067]\n",
+      "[2.09512909e-05 7.98457627e-01]\n",
+      "[0.45058405 0.99986067]\n",
+      "[2.09512909e-05 7.98457627e-01]\n"
+     ]
+    }
+   ],
    "source": [
     "# Define expected distributions for fitted \"chi2\"\n",
     "from scipy.special import erf, erfinv\n",
@@ -54,46 +78,57 @@
     "\n",
     "\n",
     "class Bee(rv_continuous):\n",
-    "    def _cdf(self, x, df):\n",
-    "        return erf(x / np.sqrt(2)) ** df\n",
+    "    def __init__(self, df=1):\n",
+    "        super().__init__(a=0)\n",
+    "        self.df = df\n",
+    "        self.chi = chi(df=1)\n",
     "\n",
-    "    def _pdf(self, x, df):\n",
-    "        return (\n",
-    "            df\n",
-    "            * (erf(x / np.sqrt(2))) ** (df - 1)\n",
-    "            * np.sqrt(2 / np.pi)\n",
-    "            * np.exp(-(x**2) / 2)\n",
-    "        )\n",
-    "\n",
-    "    def ppf(self, x, df):\n",
-    "        return erfinv((x) ** (1 / df)) * np.sqrt(2)\n",
-    "\n",
-    "\n",
-    "# Instance of the distribution, support starts at 0\n",
-    "BEE = Bee(a=0)\n",
+    "    def _cdf(self, x):\n",
+    "        p = self.chi.cdf(x) ** self.df\n",
+    "        return p\n",
     "\n",
     "\n",
     "class Bee2(rv_continuous):\n",
-    "    def _cdf(self, x, df):\n",
-    "        b = np.sqrt(x)\n",
-    "        ret = BEE.cdf(b, df)\n",
-    "        return ret\n",
+    "    def __init__(self, df=1):\n",
+    "        super().__init__(a=0)\n",
+    "        self.df = df\n",
+    "        self.chi2 = chi2(df=1)\n",
     "\n",
-    "    def _pdf(self, x, df):\n",
-    "        return (\n",
-    "            df\n",
-    "            * (erf(np.sqrt(x / 2))) ** (df - 1)\n",
-    "            / np.sqrt(2 * np.pi * x)\n",
-    "            * np.exp(-x / 2)\n",
-    "        )\n",
-    "\n",
-    "    def _ppf(self, x, df):\n",
-    "        b = BEE.ppf(x, df)\n",
-    "        return b**2\n",
+    "    def _cdf(self, x):\n",
+    "        p = self.chi2.cdf(x) ** self.df\n",
+    "        return p\n",
     "\n",
     "\n",
-    "# Instance of the distribution, support starts at 0\n",
-    "BEE2 = Bee2(a=0)"
+    "class Cee(rv_continuous):\n",
+    "    def __init__(self, k=[1]):\n",
+    "        super().__init__(a=0)\n",
+    "        self.k = np.atleast_1d(k)\n",
+    "        self.chi = [chi(df=_df) for _df in self.k]\n",
+    "\n",
+    "    def _cdf(self, x):\n",
+    "        p = [c.cdf(x) for c in self.chi]\n",
+    "        return np.prod(p, axis=0)\n",
+    "\n",
+    "\n",
+    "class Cee2(rv_continuous):\n",
+    "    def __init__(self, k=[1]):\n",
+    "        super().__init__(a=0)\n",
+    "        self.k = np.atleast_1d(k)\n",
+    "        self.chi2 = [chi2(df=_df) for _df in self.k]\n",
+    "\n",
+    "    def _cdf(self, x):\n",
+    "        p = [c.cdf(x) for c in self.chi2]\n",
+    "        return np.prod(p, axis=0)\n",
+    "\n",
+    "\n",
+    "print(Bee(df=5).cdf((2, 5)))\n",
+    "print(Bee(df=25).cdf((2, 5)))\n",
+    "print(Bee2(df=5).cdf((4, 25)))\n",
+    "print(Bee2(df=25).cdf((4, 25)))\n",
+    "print(Cee(k=5).cdf((2, 5)))\n",
+    "print(Cee(k=(5, 20)).cdf((2, 5)))\n",
+    "print(Cee2(k=5).cdf((4, 25)))\n",
+    "print(Cee2(k=[5, 20]).cdf((4, 25)))"
    ]
   },
   {
