--- a/datasets.ipynb
+++ b/datasets.ipynb
@@ -82,13 +82,15 @@
     "\n",
     "N_DIM = 10\n",
     "N_POINTS = 1000000\n",
-    "def default_sets(N_dim=N_DIM, N_points=N_POINTS, type=\"full\", blocks=None):\n",
+    "def default_sets(N_dim=N_DIM, N_points=N_POINTS, type=\"full\", blocks=None, remove={}):\n",
     "    sets = {\n",
     "        \"Uncorr.\": (N_dim, N_points, 0.0,  0.0),\n",
     "        \"Corr.50\": (N_dim, N_points, 0.5,  0.0),\n",
     "        \"Corr.90\": (N_dim, N_points, 0.9,  0.0),\n",
     "        \"Corr.99\": (N_dim, N_points, 0.99, 0.0),\n",
     "    }\n",
+    "    for key in remove:\n",
+    "        del sets[key]\n",
     "    keys = list(sets.keys())\n",
     "    for k in keys:\n",
     "        sets[k] = dataset(*sets[k], type=type, blocks=blocks)\n",
